The transition between the screens is working, and I have the homepage visible when the user first goes to the website. At the moment I was making the home page look nice along with the about page. I planned to add somewhat of a better place holder for the map section, but it's already too late and I need to go to bed.

--- a/index.html
+++ b/index.html
@@ -33,11 +33,53 @@
     </nav>
     <!--Here is where I am going to put the screens -->
     <div id="content">
-      <div class="screen" id="home">Home page</div>
-      <div class="screen" id="search">Search page</div>
+
+    <!-- The Home page -->
+      <div class="screen" id="home">
+        <center>
+          <div class="card">
+            <div class="card-header">
+              The Home Page 
+            </div>
+              <div class="card-body">
+                <h5 class="card-title">Goal</h5>
+                  <p class="card-text">For this project, I built a Single-Page App that allows users to search for Chicago City-Owned Land Inventory data.</p>
+                    <a href="https://dev.socrata.com/foundry/data.cityofchicago.org/aksk-kvfp" class="btn btn-primary">LINK</a>
+                </div>
+        </div>
+        </center>
+      </div>
+
+      <!--The Search Page -->
+      <div class="screen" id="search">
+        <center>
+          <div class="card w-75">
+            <div class="card-body">
+              <h5 class="card-title">Search!</h5>
+              <p class="card-text">Enter the number warden that you wish to search or something (still under the works)</p>
+              <form class="d-flex">
+                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success" type="submit">Search</button>
+              </form>
+            </div>
+          </div>
+        </center>
+      </div>
+
+      <!-- The results page -->
       <div class="screen" id="results">Results page</div>
+
+
+      <!-- The Map page -->
       <div class="screen" id="map">Here is where the map is going to be</div>
-      <div class="screen" id="about">This is the about page</div>
+
+
+      <!-- The about page -->
+      <div class="screen" id="about">
+          <center>
+            <p>This App was created by Abraham Morales Arroyo</p>
+          </center>
+        </div>
     </div>
     <!-- End of content -->
 
