I added one more entry for the search section

--- a/index.html
+++ b/index.html
@@ -56,11 +56,17 @@
           <div class="card w-75">
             <div class="card-body">
               <h5 class="card-title">Search!</h5>
-              <p class="card-text">Enter the number warden that you wish to search or something (still under the works)</p>
+              <p class="card-text">Enter ward Number</p>
               <form class="d-flex">
                 <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success" type="submit">Search</button>
+                
               </form>
+              <p class="card-text"></p>
+              <p class="card-text">Enter the Community Name</p>
+                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success" type="submit">Search</button>
+              </form>              
+              
             </div>
           </div>
         </center>
